refactor(context): 重构Context模块以统一模型输入控制
- 完成TEXT主链路的模型输入控制，统一由ContextOrchestrator和ContextMessageAssembler生成
- 实现完整的Session历史管理和工具交换校验机制
- 添加集中式ContextPolicies策略管理，统一sourceKey权限控制
- 实现可选上下文裁剪和真实Memory摘要压缩功能
- 完善Token估算校准和FULL_DEBUG全文Trace功能
- 优化SessionMemory持久化，支持完整turn历史和原子写回
- 更新ToolGroup选择逻辑，支持结构化dispatch outcome追踪
- 删除遗留的影子装配代码和非TEXT兼容链路相关注释
- 重构AgentConfig中toolRegistry的依赖关系和初始化逻辑
- 完善测试用例覆盖token估算误差和大消息截断场景